classDiagram
    class AssistantController {
      +QueryAsync(request, cancellationToken)
    }

    class IProcessNaturalLanguageQueryUseCase {
      +ExecuteAsync(request, cancellationToken)
    }

    class ProcessNaturalLanguageQueryUseCase {
      -ISchemaContextAssembler _schemaContextAssembler
      -ISqlGenerationGateway _sqlGenerationGateway
      -ISqlQueryExecutor _sqlQueryExecutor
      +ExecuteAsync(request, cancellationToken)
    }

    class ISchemaContextAssembler {
      +BuildAsync(question, cancellationToken)
    }

    class SchemaContextAssembler {
      -ISchemaKnowledgeSearchGateway _schemaKnowledgeSearchGateway
      -IInformationSchemaReader _informationSchemaReader
      +BuildAsync(question, cancellationToken)
    }

    class ISqlGenerationGateway {
      +GenerateSqlAsync(question, schemaContext, cancellationToken)
    }

    class OpenAiSqlGenerationGateway {
      +GenerateSqlAsync(question, schemaContext, cancellationToken)
    }

    class ISqlQueryExecutor {
      +ExecuteReadOnlyAsync(sqlStatement, cancellationToken)
    }

    class MySqlQueryExecutor {
      +ExecuteReadOnlyAsync(sqlStatement, cancellationToken)
    }

    class IInformationSchemaReader {
      +ReadSchemaAsync(cancellationToken)
    }

    class InformationSchemaReader {
      +ReadSchemaAsync(cancellationToken)
    }

    class ISchemaKnowledgeSearchGateway {
      +SearchAsync(question, cancellationToken)
    }

    class JsonSchemaKnowledgeSearchGateway {
      +SearchAsync(question, cancellationToken)
    }

    class SqlStatement {
      +Value
      +Create(rawSql)
    }

    AssistantController --> IProcessNaturalLanguageQueryUseCase
    ProcessNaturalLanguageQueryUseCase ..|> IProcessNaturalLanguageQueryUseCase
    ProcessNaturalLanguageQueryUseCase --> ISchemaContextAssembler
    ProcessNaturalLanguageQueryUseCase --> ISqlGenerationGateway
    ProcessNaturalLanguageQueryUseCase --> ISqlQueryExecutor

    SchemaContextAssembler ..|> ISchemaContextAssembler
    SchemaContextAssembler --> ISchemaKnowledgeSearchGateway
    SchemaContextAssembler --> IInformationSchemaReader

    OpenAiSqlGenerationGateway ..|> ISqlGenerationGateway
    MySqlQueryExecutor ..|> ISqlQueryExecutor
    InformationSchemaReader ..|> IInformationSchemaReader
    JsonSchemaKnowledgeSearchGateway ..|> ISchemaKnowledgeSearchGateway

    MySqlQueryExecutor --> SqlStatement
